testsuite/tests/parser/should_fail/patFail007.hs
module PatFail007 where

f (+1) = _
