testsuite/tests/parser/should_fail/patFail007.stderr

patFail007.hs:3:4: error: [GHC-72516] Parse error in pattern: +1
